{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 243,
  "lineage": "57b0c9d2-aca0-e1f3-7fcc-d93d58080d5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ae4d2a95f4c2160",
            "domain": "vpc",
            "id": "eipalloc-03ae4d2a95f4c2160",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-182-180.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.182.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_a",
              "env": "Development"
            },
            "tags_all": {
              "Name": "eip_a",
              "env": "Development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070d5b75803aeba35",
            "domain": "vpc",
            "id": "eipalloc-070d5b75803aeba35",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-194-68.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.194.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_b",
              "env": "Development"
            },
            "tags_all": {
              "Name": "eip_b",
              "env": "Development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "amc-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:internet-gateway/igw-0fba238909e216327",
            "id": "igw-0fba238909e216327",
            "owner_id": "891377301746",
            "tags": {
              "Name": "amc-vpc-igw",
              "env": "Development"
            },
            "tags_all": {
              "Name": "amc-vpc-igw",
              "env": "Development"
            },
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-2a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ae4d2a95f4c2160",
            "association_id": "eipassoc-035465a074680e0c2",
            "connectivity_type": "public",
            "id": "nat-052c558bac04f162f",
            "network_interface_id": "eni-0ae013d70828babd7",
            "private_ip": "10.0.1.88",
            "public_ip": "43.204.182.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-097aff4c98cecb6e5",
            "tags": {
              "Name": "nat-gw-2a-public",
              "env": "Development"
            },
            "tags_all": {
              "Name": "nat-gw-2a-public",
              "env": "Development"
            }
          },
          "dependencies": [
            "aws_eip.eip_a",
            "aws_subnet.public_a",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-2b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070d5b75803aeba35",
            "association_id": "eipassoc-0e713d7def2b99d56",
            "connectivity_type": "public",
            "id": "nat-0677197f232d60112",
            "network_interface_id": "eni-029071d682e5709e7",
            "private_ip": "10.0.2.191",
            "public_ip": "3.6.194.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-090c908a6ba4f8fba",
            "tags": {
              "Name": "nat-gw-2b-public",
              "env": "Development"
            },
            "tags_all": {
              "Name": "nat-gw-2b-public",
              "env": "Development"
            }
          },
          "dependencies": [
            "aws_eip.eip_b",
            "aws_subnet.public_b",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fba238909e216327",
            "id": "r-rtb-037b6ada95ab624761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037b6ada95ab62476",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.amc-vpc-igw",
            "aws_route_table.rt_public_a",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fba238909e216327",
            "id": "r-rtb-03fd8e3f17d2003171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03fd8e3f17d200317",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.amc-vpc-igw",
            "aws_route_table.rt_public_b",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_pa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0868bdda3b6428f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052c558bac04f162f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0868bdda3b6428f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_a",
            "aws_nat_gateway.nat-gw-2a-public",
            "aws_route_table.rt_private_a",
            "aws_subnet.public_a",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_pb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e6aa5bacf6564f701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0677197f232d60112",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6aa5bacf6564f70",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_b",
            "aws_nat_gateway.nat-gw-2b-public",
            "aws_route_table.rt_private_b",
            "aws_subnet.public_b",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:route-table/rtb-0868bdda3b6428f33",
            "id": "rtb-0868bdda3b6428f33",
            "owner_id": "891377301746",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_private_a",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt_private_a",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:route-table/rtb-0e6aa5bacf6564f70",
            "id": "rtb-0e6aa5bacf6564f70",
            "owner_id": "891377301746",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_private_b",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt_private_b",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:route-table/rtb-037b6ada95ab62476",
            "id": "rtb-037b6ada95ab62476",
            "owner_id": "891377301746",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_public_a",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt_public_a",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:route-table/rtb-03fd8e3f17d200317",
            "id": "rtb-03fd8e3f17d200317",
            "owner_id": "891377301746",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_public_b",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt_public_b",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0887f8bc5b0baf94b",
            "route_table_id": "rtb-0868bdda3b6428f33",
            "subnet_id": "subnet-048616f806deefed2"
          },
          "dependencies": [
            "aws_route_table.rt_private_a",
            "aws_subnet.private_a",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3cda871bbb90bd6",
            "route_table_id": "rtb-0e6aa5bacf6564f70",
            "subnet_id": "subnet-0e89051ae048e1a58"
          },
          "dependencies": [
            "aws_route_table.rt_private_b",
            "aws_subnet.private_b",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faa3bf100ea0098a",
            "route_table_id": "rtb-037b6ada95ab62476",
            "subnet_id": "subnet-097aff4c98cecb6e5"
          },
          "dependencies": [
            "aws_route_table.rt_public_a",
            "aws_subnet.public_a",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1dd6258b5c7e59c",
            "route_table_id": "rtb-03fd8e3f17d200317",
            "subnet_id": "subnet-090c908a6ba4f8fba"
          },
          "dependencies": [
            "aws_route_table.rt_public_b",
            "aws_subnet.public_b",
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:subnet/subnet-048616f806deefed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048616f806deefed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377301746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a",
              "env": "Development"
            },
            "tags_all": {
              "Name": "private_a",
              "env": "Development"
            },
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:subnet/subnet-0e89051ae048e1a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e89051ae048e1a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377301746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_b",
              "env": "Development"
            },
            "tags_all": {
              "Name": "private_b",
              "env": "Development"
            },
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:subnet/subnet-097aff4c98cecb6e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097aff4c98cecb6e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377301746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_a",
              "env": "Development"
            },
            "tags_all": {
              "Name": "public_a",
              "env": "Development"
            },
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:subnet/subnet-090c908a6ba4f8fba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090c908a6ba4f8fba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377301746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_b",
              "env": "Development"
            },
            "tags_all": {
              "Name": "public_b",
              "env": "Development"
            },
            "vpc_id": "vpc-0b8128b675bcb828a"
          },
          "dependencies": [
            "aws_vpc.amc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "amc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377301746:vpc/vpc-0b8128b675bcb828a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6003c0da778ec3b",
            "default_route_table_id": "rtb-0a19670de85b2521f",
            "default_security_group_id": "sg-0e8ab9cff297c0056",
            "dhcp_options_id": "dopt-0155369d2a8f495a6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8128b675bcb828a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a19670de85b2521f",
            "owner_id": "891377301746",
            "tags": {
              "Name": "amc-vpc",
              "env": "Development"
            },
            "tags_all": {
              "Name": "amc-vpc",
              "env": "Development"
            }
          }
        }
      ]
    }
  ]
}